<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.5.22.RELEASE</version>
    <relativePath/>
  </parent>
  <groupId>com.tnf.cas</groupId>
  <artifactId>ress-parent</artifactId>
  <version>1.2.0.5.5-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>ress-common</module>
    <module>ress-bson</module>
    <module>ress-srv</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.33</slf4j.version>
    <log4j.version>2.17.1</log4j.version>
    <oracle-jre-version>8u92-fcs-bin-b14-linux-x64-31_mar_2016</oracle-jre-version>
    <unpacked-jre-version>jre1.8.0_92</unpacked-jre-version>
    <hive.version>1.2.1</hive.version>
    <hadoop.version>2.6.0</hadoop.version>
    <jersey.version>2.29.1</jersey.version>
    <cassandra.version>3.0.9</cassandra.version>
    <cassandra.driver.version>3.1.0</cassandra.driver.version>
    <jackson.version>2.8.11</jackson.version>
    <curator.verison>2.7.1</curator.verison>
    <netty.version>4.1.17.Final</netty.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.3</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <shortRevisionLength>8</shortRevisionLength>
          <doCheck>false</doCheck>
          <doUpdate>false</doUpdate>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <!--suppress MavenModelInspection -->
              <Branch-Name>${scmBranch}</Branch-Name>
              <!--suppress MavenModelInspection -->
              <Build-Number>${buildNumber}</Build-Number>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <tagNameFormat>@{project.version}</tagNameFormat>
          <goals>install pre-site deploy</goals>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.2</version>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <quiet>true</quiet>
          <formats>
            <format>xml</format>
          </formats>
          <instrumentation>
            <includes>
              <include>com/tnf/cas/**/*.class</include>
            </includes>
          </instrumentation>
        </configuration>
      </plugin>
      <plugin>
        <!-- Enforces gitflow version and branching rules. Chooses appropriate nexus repository to deploy artifacts based on git branch
                    name. See: https://github.com/egineering-llc/gitflow-helper-maven-plugin and https://www.e-gineering.com/2016/02/02/gitflow-maven-and-ci-done-right-part-1-teaching-maven-new-tricks/ -->
        <groupId>com.e-gineering</groupId>
        <artifactId>gitflow-helper-maven-plugin</artifactId>
        <version>1.4.0</version>
        <configuration>
          <!-- Repository for actual release. Only populated when building from
                         master branch, in which case code is not actually built but artifacts are
                         downloaded from the staging repository and uploaded to the release repository -->
          <releaseDeploymentRepository>artifactory::default::https://eu.artifactory.swg-devops.com:443/artifactory/hyc-tas-aaf-team-maven-local::false</releaseDeploymentRepository>
          <!-- Staging repository. Artifacts are non-SNAPSHOT versions and may
                         be promoted to releases. If an artifact is promoted to a release this plugin
                         downloads it from the staging repository and uploads to the release repository -->
          <stageDeploymentRepository>artifactory::default::https://eu.artifactory.swg-devops.com:443/artifactory/hyc-tas-aaf-team-staging-maven-local::false</stageDeploymentRepository>
          <!-- Snapshot repository. Artifacts built from development branch must
                         be SNAPSHOT versions and uploaded here -->
          <snapshotDeploymentRepository>artifactory::default::https://eu.artifactory.swg-devops.com:443/artifactory/hyc-tas-aaf-team-snapshot-maven-local::false</snapshotDeploymentRepository>
          <!-- Name of release tags on master branch -->
          <tag>${project.version}</tag>
          <!-- Pattern for development branches. Must use SNAPSHOT versions. Artifacts
                         uploaded to <snapshotDeploymentRepository> -->
          <developmentBranchPattern>origin/(development.*|feature-.*|bugfix-.*)</developmentBranchPattern>
          <!-- Pattern for master branch. No build performed, artifacts downloaded
                         from <stageDeploymentRepository> and uploaded to <releaseDeploymentRepository> -->
          <masterBranchPattern>origin/master</masterBranchPattern>
          <!-- Pattern for hotfix branch. Must use non-SNAPSHOT versions. Artifacts
                         uploaded to <stageDeploymentRepository> -->
          <hotfixBranchPattern>origin/maintenance-.*</hotfixBranchPattern>
          <!-- Patter for release branch. Must use non-SNAPSHOT versions. Artifacts
                         uploaded to <stageDeploymentRepository> -->
          <releaseBranchPattern>origin/release-.*</releaseBranchPattern>
          <!-- Branches not listed above are assumed to be feature/developer/bugfix
                         branches and artifacts are only installed in the local repository and never
                         deployed to Nexus. Also, when maven build is not run by jenkins the git branch
                         will not be resolved and behaviour will default to feature/developer/bugfix
                         branch behaviour, i.e. don't deploy -->
        </configuration>
        <extensions>true</extensions>
        <executions>
          <execution>
            <goals>
              <goal>enforce-versions</goal>
              <goal>retarget-deploy</goal>
              <goal>tag-master</goal>
              <goal>promote-master</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.10</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.4</version>
          <executions>
            <execution>
              <id>enforce</id>
              <configuration>
                <rules>
                  <DependencyConvergence/>
                </rules>
              </configuration>
              <goals>
                <goal>enforce</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
            <argLine>
              --add-opens java.base/java.lang=ALL-UNNAMED
              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
              --add-opens java.base/java.util=ALL-UNNAMED
              --add-opens java.base/java.lang.invoke=ALL-UNNAMED
            </argLine>
            <systemPropertyVariables>
              <org.testcontainers.dockerclient.tcp.connection>unix:///var/run/docker.sock</org.testcontainers.dockerclient.tcp.connection>
            </systemPropertyVariables>
            <environmentVariables>
              <DOCKER_HOST>unix:///var/run/docker.sock</DOCKER_HOST>
              <DOCKER_API_VERSION>1.40</DOCKER_API_VERSION>
            </environmentVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.powermock</groupId>
      <artifactId>powermock-api-mockito</artifactId>
    </dependency>
    <dependency>
      <groupId>org.powermock</groupId>
      <artifactId>powermock-module-junit4</artifactId>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      
      
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>1.3.176</version>
        <scope>test</scope>
      </dependency>
      
      <dependency>
        <groupId>org.apache.hadoop</groupId>
        <artifactId>hadoop-common</artifactId>
        <version>${hadoop.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-server</artifactId>
          </exclusion>
        </exclusions>
        <scope>provided</scope>
      </dependency>
      
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.10</version>
        <scope>test</scope>
      </dependency>
      
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>1.10.19</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.powermock</groupId>
        <artifactId>powermock-api-mockito</artifactId>
        <version>1.6.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.powermock</groupId>
        <artifactId>powermock-module-junit4</artifactId>
        <version>1.6.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tnf.postinstall</groupId>
        <artifactId>postinstall-util</artifactId>
        <version>1.0.3</version>
      </dependency>
      <dependency>
        <groupId>com.caucho</groupId>
        <artifactId>hessian</artifactId>
        <version>4.0.1</version>
      </dependency>
            <dependency>
                <groupId>com.datastax.cassandra</groupId>
                <artifactId>cassandra-driver-core</artifactId>
                <version>${cassandra.driver.version}</version>
            </dependency>
      <dependency>
        <groupId>org.apache.cassandra</groupId>
        <artifactId>apache-cassandra</artifactId>
        <version>${cassandra.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.core</groupId>
        <artifactId>jersey-server</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.core</groupId>
        <artifactId>jersey-client</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.containers</groupId>
        <artifactId>jersey-container-servlet-core</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.containers</groupId>
        <artifactId>jersey-container-servlet</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>net.java.dev.jna</groupId>
        <artifactId>jna</artifactId>
        <version>5.16.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>18.0</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-json-jackson</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey.media</groupId>
        <artifactId>jersey-media-json-processing</artifactId>
        <version>${jersey.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-cli</groupId>
        <artifactId>commons-cli</artifactId>
        <version>1.1</version>
      </dependency>
      <dependency>
        <groupId>org.apache.curator</groupId>
        <artifactId>curator-framework</artifactId>
        <version>${curator.verison}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j-impl</artifactId>
        <version>${log4j.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
</project>
